@@ -38,8 +38,8 @@ import org.ehcache.spi.persistence.StateHolder;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
+import org.terracotta.offheapresource.OffHeapResourceIdentifier;
 import org.terracotta.offheapresource.OffHeapResourcesProvider;
-import org.terracotta.offheapresource.config.MemoryUnit;
 import org.terracotta.passthrough.PassthroughClusterControl;
 import org.terracotta.passthrough.PassthroughTestHelpers;
 
@@ -47,9 +47,8 @@ import java.io.Serializable;
 import java.lang.reflect.Field;
 import java.net.URI;
 import java.util.Arrays;
-
+import java.util.Collections;
 import static org.ehcache.clustered.client.config.builders.ClusteredResourcePoolBuilder.clusteredDedicated;
-import static org.ehcache.clustered.client.internal.UnitTestConnectionService.getOffheapResourcesType;
 import static org.ehcache.config.Eviction.noAdvice;
 import static org.ehcache.config.builders.ExpiryPolicyBuilder.noExpiration;
 import static org.ehcache.config.builders.ResourcePoolsBuilder.newResourcePoolsBuilder;
@@ -77,7 +76,9 @@ public class StateRepositoryWhitelistingTest {
         server.registerClientEntityService(new ClusterTierClientEntityService());
         server.registerServerEntityService(new VoltronReadWriteLockServerEntityService());
         server.registerClientEntityService(new VoltronReadWriteLockEntityClientService());
-        server.registerExtendedConfiguration(new OffHeapResourcesProvider(getOffheapResourcesType("test", 32, MemoryUnit.MB)));
+        OffHeapResourcesProvider offheapResources = new OffHeapResourcesProvider(Collections.emptyMap());
+        offheapResources.addOffHeapResource(OffHeapResourceIdentifier.identifier("test"), 32 * 1024 * 1024);
+        server.registerExtendedConfiguration(offheapResources);
 
         UnitTestConnectionService.addServerToStripe(STRIPENAME, server);
       }
@@ -166,9 +167,9 @@ public class StateRepositoryWhitelistingTest {
     StateHolder<Integer, Integer> testMap = stateRepository.getPersistentStateHolder("testMap", Integer.class, Integer.class,
       Arrays.asList(Child.class)::contains, null);
 
-    testMap.putIfAbsent(new Integer(10), new Integer(20));
+    testMap.putIfAbsent(Integer.valueOf(10), Integer.valueOf(20));
 
-    assertThat(testMap.get(new Integer(10)), is(new Integer(20)));
+    assertThat(testMap.get(Integer.valueOf(10)), is(Integer.valueOf(20)));
     assertThat(testMap.entrySet(), hasSize(1));
   }
 
