@@ -39,12 +39,11 @@ public class GetFieldTest {
 
   @Test
   public void testGetField() throws Exception {
-    @SuppressWarnings("unchecked")
     StatefulSerializer<Serializable> s = new CompactJavaSerializer<>(null);
     s.init(new TransientStateRepository());
 
     ClassLoader loaderA = createClassNameRewritingLoader(Foo_A.class);
-    Serializable a = (Serializable) loaderA.loadClass(newClassName(Foo_A.class)).newInstance();
+    Serializable a = (Serializable) loaderA.loadClass(newClassName(Foo_A.class)).getDeclaredConstructor().newInstance();
     ByteBuffer encodedA = s.serialize(a);
 
     pushTccl(createClassNameRewritingLoader(Foo_B.class));
